tests/paczka1/fuzzy1/61082702.err
Error in line 4: Lny8iKKHR A377 56,4
Error in line 19: Csw A277 22,H
Error in line 24: Lny8iKKHR A277 69,5
Error in line 23: YKUB1tTF S494 57,2
